<resources>
    <!--   All-->
    <string name="app_name">IRIS house security system</string>
    <!--   Main layout-->
    <string name="button_connect_text">Connect</string>
    <string name="button_disconnect_text">Disconnect</string>
    <string name="button_settings">Settings</string>
    <string name="button_home">Home</string>
    <string name="button_profile">Profile</string>
    <string name="all_good">It\'s all good!</string>
    <string name="attention">ATTENTION! The person was detected in the area</string>
    <!--   Settings layout-->
    <string name="button_about">About</string>
    <string name="button_manual">Manual</string>
    <string name="button_contact">Contact us</string>
    <string name="back_button">back button</string>
    <string name="settings">Settings</string>
    <string name="manyal">An app to keep your home safe.\nOnce a certain period of time, it makes a request to the server, which processes the image of your premises and provides information about the presence of an intruder.</string>
    <string name="contact">If you have any suggestions or comments, please contact us at the following address: </string>
</resources>